2002-05-04  wakaba <w@suika.fam.cx>

	* XMoe.pm: New module.
	* CSV.pm: Use XMoe.pm.

2002-04-27  wakaba <w@suika.fam.cx>

	* MsgIDs.pm: New module.
	* MsgID.pm: Remade.

2002-04-22  wakaba <w@suika.fam.cx>

	* Makefile: New file.
	
	* Received.pm: Reformed.

2002-04-21  wakaba <w@suika.fam.cx>

	* ValueParams.pm: Merged ContentDisposition.pm.
	* ContentDisposition.pm: Removed.
	* ContentType.pm: Reformed.

2002-04-13  wakaba <w@suika.fam.cx>

	* Path.pm: Reformed.

2002-04-06  wakaba <w@suika.fam.cx>

	* UA.pm: Reformed.

2002-04-05  wakaba <w@suika.fam.cx>

	* Structured.pm, Unstructured.pm: Use new style.
	* Numval.pm: Use base Structured.pm.

2002-04-02  wakaba <w@suika.fam.cx>

	* Path.pm: New module.

2002-04-01  wakaba <w@suika.fam.cx>

	* URI.pm (uri): New method.

2002-03-31  wakaba <w@suika.fam.cx>

	* URI.pm: New module.
	* Numval.pm: Likewise.

2002-03-28  wakaba <w@suika.fam.cx>

	* Address.pm (dont_reply): New method.
	(keyword): New method.
	* Date.pm (as_rfc822_time): Fix typo of C<day-of-week>.

2002-03-26  wakaba <w@suika.fam.cx>

	* UA.pm: New module.

2002-03-25  wakaba <w@suika.fam.cx>

	* Address.pm, CSV.pm, Params.pm, Unstructured.pm,
	ValueParams.pm: Call hook function for character
	code convertion and decoding encoded-word when
	parse or stringify.

2002-03-23  wakaba <w@suika.fam.cx>

	* Params.pm, ContentType.pm, ContentDisposition.pm,
	ValueParams.pm: New files.

2002-03-21  wakaba <w@suika.fam.cx>

	* CSV.pm: New module.

2002-03-20  wakaba <w@suika.fam.cx>

	* MsgID.pm, Received.pm, Subject.pm: New modules.
	* MsgID/: New directory.

2002-03-16  wakaba <w@suika.fam.cx>

	* Date.pm: Support ISO 8601 (full format), RFC 561/724 
	(slash format).

2002-03-15  wakaba <w@suika.fam.cx>

	* Date.pm: New module.

2002-03-14  wakaba <w@suika.fam.cx>

	* Structured.pm, Unstructured.pm: New modules.

2002-03-13  wakaba <w@suika.fam.cx>

	* Address.pm: New module.
	
	* ChangeLog: New file.