@@ -2,6 +2,8 @@
 
 	* XMoe.pm: New module.
 	* CSV.pm: Use XMoe.pm.
+	
+	* MsgID/: Removed.
 
 2002-04-27  wakaba <w@suika.fam.cx>
 
